# InfiRay_thermal_camera

./: README.md  main_debug.cpp  main_v2_opencv_gray.cpp  main_v2_opencv_gray_and_color copy_fast.cpp  main_v2_opencv_gray_and_color.cpp  main_v3_fast.cpp  main_v4.cpp  main_v8.cpp  readme.md
src/infiray_ros2/: CMakeLists.txt
src/infiray_ros2/src/: infiray_with_ros2_fixed_fast.cpp
